--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -75,6 +75,7 @@
     font-weight: 600;
     font-size: 20px;
     color: black;
+    cursor: pointer;
 }
 
 .name:hover {
